package org.anubis.lectures.studentmngmtsys.model;

public class CourseEnrollment {
}
